--- a/_posts/2017-02-18-sobre.md
+++ b/_posts/2017-02-18-sobre.md
@@ -14,4 +14,4 @@ Provedor de acesso a internet wireless com sede em Mauá - SP.
 
 Nossa expertise em tecnologia nos permite atender, com excelência, clientes com diferentes necessidades para o acesso a internet.
 
-Oferecemos diversos paotes para conexões via rádio ou fibra.
+Oferecemos diversos pacotes para conexões via rádio ou fibra.
