--- a/_posts/2017-02-18-sobre.md
+++ b/_posts/2017-02-18-sobre.md
@@ -1,17 +1,11 @@
 ---
 layout: post
-title: A Rede Telenew
+title: A Otimatech Telecom
 subtitle: Quem somos
 image: "sobre.jpg"
 link: "/sobre.html"
-date: 2017-02-18
+date: 2018-02-18
 tags:
 - sobre
 excerpt_separator: <!--more-->
 ---
-
-Provedor de acesso a internet wireless com sede em Mauá - SP.
-
-Nossa expertise em tecnologia nos permite atender, com excelência, clientes com diferentes necessidades para o acesso a internet.
-
-Oferecemos diversos pacotes para conexões via rádio ou fibra.
