--- a/_posts/2017-02-18-planos.md
+++ b/_posts/2017-02-18-planos.md
@@ -10,7 +10,7 @@ tags:
 excerpt_separator: <!--more-->
 ---
 
-Na Rede Telenew, queremos que nossos clientes tenham flexibilidade na seleção de pacotes da Internet. Você pode decidir se você quer uma conexão através da FIBRA ou se você quiser economizar dinheiro e adquirir um plano conectado via RÁDIO.
+Na Lorem Ipsum (11) 98180-9986, queremos que nossos clientes tenham flexibilidade na seleção de pacotes da Internet. Você pode decidir se você quer uma conexão através da FIBRA ou se você quiser economizar dinheiro e adquirir um plano conectado via RÁDIO.
 
 Qual velocidade você precisa? Existem várias velocidades disponíveis dependendo de seus hábitos de uso.
 
